# normtrace-ihr

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
docs/: api_reference.md
normtrace/: __init__.py
normtrace/ihr/: __init__.py  articles.py  prompts.py  schema.py  scoring.py
normtrace/references/: legal_theory.yaml  references.bib
notebooks/: normtrace_ihr_walkthrough.ipynb
tests/: conftest.py  test_articles.py  test_schema.py  test_scoring.py
